--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "vue": "^3.2.31"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "typescript": "^4.6.3",
-    "vite": "^2.9.1",
+    "vite": "^4.2.1",
     "vue-tsc": "^0.29.8"
   }
 }
