--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "sass": "^1.60.0",
-    "vue": "^3.2.31",
+    "sass": "1.49.11",
+    "svgo": "2.8.0",
+    "svgstore": "3.0.1",
+    "vue": "3.2.31",
     "vue-router": "4.0.14"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.1",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "typescript": "^4.6.3",
-    "vite": "^4.2.1",
-    "vue-tsc": "^0.29.8"
+    "@vitejs/plugin-vue": "2.3.1",
+    "@vitejs/plugin-vue-jsx": "1.3.9",
+    "typescript": "4.6.3",
+    "vite": "2.9.1",
+    "vue-tsc": "0.29.8"
   }
 }
